docs/envoy/v1.15.0/_sources/api-v3/config/trace/v3/http_tracer.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/trace/v3/http_tracer.proto:

Tracing
=======

Tracing :ref:`architecture overview <arch_overview_tracing>`.

.. _envoy_v3_api_msg_config.trace.v3.Tracing:

config.trace.v3.Tracing
-----------------------

`[config.trace.v3.Tracing proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/trace/v3/http_tracer.proto#L28>`_

The tracing configuration specifies settings for an HTTP tracer provider used by Envoy.

Envoy may support other tracers in the future, but right now the HTTP tracer is the only one
supported.

.. attention::

  Use of this message type has been deprecated in favor of direct use of
  :ref:`Tracing.Http <envoy_v3_api_msg_config.trace.v3.Tracing.Http>`.

.. code-block:: json

  {
    "http": "{...}"
  }

.. _envoy_v3_api_field_config.trace.v3.Tracing.http:

http
  (:ref:`config.trace.v3.Tracing.Http <envoy_v3_api_msg_config.trace.v3.Tracing.Http>`) Provides configuration for the HTTP tracer.
  
  
.. _envoy_v3_api_msg_config.trace.v3.Tracing.Http:

config.trace.v3.Tracing.Http
----------------------------

`[config.trace.v3.Tracing.Http proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/trace/v3/http_tracer.proto#L37>`_

Configuration for an HTTP tracer provider used by Envoy.

The configuration is defined by the
:ref:`HttpConnectionManager.Tracing <envoy_v3_api_msg_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.Tracing>`
:ref:`provider <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.Tracing.provider>`
field.

.. code-block:: json

  {
    "name": "...",
    "typed_config": "{...}"
  }

.. _envoy_v3_api_field_config.trace.v3.Tracing.Http.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the HTTP trace driver to instantiate. The name must match a
  supported HTTP trace driver. Built-in trace drivers:
  
  - *envoy.tracers.lightstep*
  - *envoy.tracers.zipkin*
  - *envoy.tracers.dynamic_ot*
  - *envoy.tracers.datadog*
  - *envoy.tracers.opencensus*
  - *envoy.tracers.xray*
  
  
.. _envoy_v3_api_field_config.trace.v3.Tracing.Http.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) 
  Trace driver specific configuration which depends on the driver being instantiated.
  See the trace drivers for examples:
  
  - :ref:`LightstepConfig <envoy_v3_api_msg_config.trace.v3.LightstepConfig>`
  - :ref:`ZipkinConfig <envoy_v3_api_msg_config.trace.v3.ZipkinConfig>`
  - :ref:`DynamicOtConfig <envoy_v3_api_msg_config.trace.v3.DynamicOtConfig>`
  - :ref:`DatadogConfig <envoy_v3_api_msg_config.trace.v3.DatadogConfig>`
  - :ref:`OpenCensusConfig <envoy_v3_api_msg_config.trace.v3.OpenCensusConfig>`
  - :ref:`AWS X-Ray <envoy_v3_api_msg_config.trace.v3.XRayConfig>`
  
  


